--- a/app/views/movies/index.html.erb
+++ b/app/views/movies/index.html.erb
@@ -15,11 +15,10 @@
 <table class="table table-striped col-md-12" id="movies">
   <thead>
     <tr>
-      <th> Title <%= link_to "Movie Title", movies_path(:movietitle => {"movietitle": 1}, :ratings=> Hash[@ratings_to_show.collect {|item| [item, 1]}]
- ), class: "#{@title_color}", id: "title_header"  %></th>
+      <th> Title <%= link_to "Movie Title", movies_path(:movietitle => {"movietitle": 1}), class: "#{@title_color}", id: "title_header"  %></th>
       <th>Rating</th>
-     <th>Release Date <%= link_to "Release Date", movies_path(:release_date => {"release_date": 1}, :ratings=> Hash[@ratings_to_show.collect { |item| [item, 1] }])
- , class: "#{@release_date_color}",  id: "release_date_header" %></th>
+     <th>Release Date <%= link_to "Release Date", movies_path(:release_date => {"release_date": 1}),
+  class: "#{@release_date_color}",  id: "release_date_header" %></th>
       <th>More Info</th>
     </tr>
   </thead>
