--- a/app/views/movies/index.html.erb
+++ b/app/views/movies/index.html.erb
@@ -17,7 +17,7 @@
     <tr>
       <th> Title <%= link_to "Movie Title", movies_path(:movietitle => {"movietitle": 1}, :ratings => Hash[@ratings_to_show.collect { |item| [item, 1] } ]), class: "#{@title_color}", id: "title_header"  %></th>
       <th>Rating</th>
-     <th>Release Date <%= link_to "Release Date", movies_path(:release_date => {"release_date": 1}),
+     <th>Release Date <%= link_to "Release Date", movies_path(:release_date => {"release_date": 1}, :ratings=> Hash[@ratings_to_show.collect { |item| [item, 1] } ]),
   class: "#{@release_date_color}",  id: "release_date_header" %></th>
       <th>More Info</th>
     </tr>
