--- a/app/views/movies/index.html.erb
+++ b/app/views/movies/index.html.erb
@@ -6,18 +6,19 @@
   <% @all_ratings.each do |rating| %>
     <div class="form-check  form-check-inline">
       <%= label_tag "ratings[#{rating}]", rating, class: 'form-check-label' %>
-      <%= check_box_tag "ratings[#{rating}]", "1",  @ratings_to_show.include?(rating), class: 'form-check-input' %>
+     <%= check_box_tag "ratings[#{rating}]", "1",  @ratings_to_show.include?(rating), class: 'form-check-input' %>
     </div>
   <% end %>
+  <%= hidden_field_tag(:home, 1) %>
   <%= submit_tag 'Refresh', id: 'ratings_submit', class: 'btn btn-primary' %>
 <% end %>
 
 <table class="table table-striped col-md-12" id="movies">
   <thead>
     <tr>
-      <th> <%= link_to "Movie Title", movies_path(:movietitle => 1, :ratings => Hash[@ratings_to_show.collect { |item| [item, 1] } ]), class: "#{@title_color}", id: "title_header"  %></th>
+      <th> <%= link_to "Movie Title", movies_path(:movietitle => 1, :ratings => Hash[@ratings_to_show.collect { |item| [item, 1] } ], :home => 1), class: "#{@title_color}", id: "title_header"  %></th>
       <th>Rating</th>
-     <th> <%= link_to "Release Date", movies_path(:release_date => 1, :ratings=> Hash[@ratings_to_show.collect { |item| [item, 1] } ]),
+     <th> <%= link_to "Release Date", movies_path(:release_date => 1, :ratings=> Hash[@ratings_to_show.collect { |item| [item, 1] } ], :home => 1),
   class: "#{@release_date_color}",  id: "release_date_header" %></th>
       <th>More Info</th>
     </tr>
